# trace

./: .gitignore  Cargo.toml  image.ppm
.claude/: settings.local.json
src/: camera.rs  color.rs  framebuffer.rs  hittable.rs  interval.rs  lambertian.rs  main.rs  material.rs  metal.rs  ray.rs  sphere.rs  vec3.rs  world.rs
src/hittable/: sphere.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs
